# audio-plugin-host

./: .gitignore  Cargo.toml  README.md  build.rs
examples/sdl-host/: Cargo.toml
examples/sdl-host/src/: main.rs
examples/show-editor/: Cargo.toml
examples/show-editor/src/: main.rs
src/: audio_bus.rs  discovery.rs  error.rs  event.rs  heapless_vec.rs  host.rs  lib.rs  parameter.rs  plugin.rs
src/formats/: clap.rs  mod.rs  vst2.rs
src/formats/vst3/: mod.rs  vst3_wrapper_sys.rs
vst3-wrapper/: .gitignore  CMakeLists.txt
vst3-wrapper/cmake/: Dependencies.cmake  get_cpm.cmake
vst3-wrapper/source/: bindings.h  vst3wrapper.cpp  vst3wrapper.h
